k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app
    color: blue  # Initially point to blue
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: LoadBalancer
